--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 /* CSS Reset */
 *{
     margin: 0;
@@ -29,7 +28,7 @@ body{
     display: grid;
     grid-template-rows: repeat(3, 10vw);
     grid-template-columns: repeat(3, 10vw);
-    font-family: 'Roboto', sans-serif;
+    font-family: monospace;
     position: relative;
 }
 
