--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body{
     color: #ff0048;
 }
 .box:hover{
-    background-color: rgb(86, 86, 88);
+    background-color: #c6ebe9;
 }
 
 .gameInfo {
